--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-error-boundary": "^3.1.4",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.30.0",
