--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.7.1",
     "firebase": "^9.7.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-error-boundary": "^3.1.4",
     "react-firebase-hooks": "^5.0.3",
