--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.7.1",
     "firebase": "^9.7.0",
     "hamburger-react": "^2.5.0",
+    "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
@@ -21,6 +22,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.30.0",
+    "react-leaflet": "^4.0.0",
     "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
